--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <title>Gantt Timeline Realtime</title>
-  <script src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
+  <meta charset="utf-8" />
+  <title>Gantt Realtime (Koyeb) - Commessa/Attività libere</title>
   <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    body { font-family: sans-serif; padding: 10px; }
-    #timeline { height: 400px; border: 1px solid #ccc; }
-    button { margin-top: 10px; }
+    body{ font-family: Inter, system-ui, -apple-system, Arial; margin: 12px; }
+    #controls{ margin-bottom:12px; display:flex; gap:8px; flex-wrap:wrap; align-items:center;}
+    input, select, button{ padding:8px; border-radius:6px; border:1px solid #ddd; }
+    #timeline{ height:520px; border:1px solid #e6e6e6; border-radius:8px; background:#fff; padding:8px; }
+    .small{ font-size:0.9rem; color:#444 }
   </style>
 </head>
 <body>
-  <h1>📅 Timeline Realtime Multiutente</h1>
+  <h1>📅 Gantt Realtime — Commessa & Attività libere</h1>
+
+  <div id="controls">
+    <input id="taskContent" placeholder="Titolo task" />
+    <input id="taskCommessa" placeholder="Commessa (es. C-123)" />
+    <input id="taskActivity" placeholder="Attività (sottogruppo) - libero" />
+    <button id="addTask">➕ Aggiungi Task</button>
+
+    <label class="small">Filtra commessa:</label>
+    <select id="filterCommessa"><option value="tutte">Tutte</option></select>
+
+    <span class="small">Connessione WS: <span id="wsStatus">—</span></span>
+  </div>
+
   <div id="timeline"></div>
-  <button id="addTask">➕ Aggiungi Task</button>
+
+  <script src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
